--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@
     grid-template-columns:1fr;
     grid-template-rows:1fr;
     overflow: hidden;
+    padding:1rem;
     }
     
     .proyecto img{    
