--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@
     display:flex;
     flex-wrap:wrap;
     justify-content:center;
-    align-items:center;
+    align-content:center;
     gap:6rem;
     
     }
@@ -177,7 +177,6 @@
     height:100%;
     width:100%;                                                                                                                
     z-index:100;
-    background:red;
     }
     
     .proyecto p{
