--- a/style.css
+++ b/style.css
@@ -76,7 +76,6 @@ justify-content:center;
 border:.1rem solid #fff;
 }
 
-
 .caja-conocimientos__img{
 height:2.5rem;
 width:2.5rem;
@@ -101,7 +100,7 @@ align-self:end;
 background:#1A1A1A;
 display:flex;
 flex-wrap:wrap;
-gap:2rem;
+gap:3rem;
 padding:5rem 2rem 5rem 2rem;
 justify-content:center;
 justify-content: start;
@@ -116,58 +115,67 @@ border-bottom:.1rem solid #fff;
 }
 
 .proyectos__caja-proyectos{
-height:13rem;
 width:20rem;
 border:.1rem solid #fff;
-border-radius:.2rem .2rem .2rem .2rem;
 }
 
-.caja-proyectos__img{
+.caja-proyectos__contenedor-img{
 height:13rem;
 width:20rem;
+}
+
+.contenedor-img__img{
+height:100%;
+width:100%;
 }
 
 .lazo{
-font-size:1rem;
+font-size: 1rem;
 font-weight: 600;
-font-family: "oswald",sans-serif;
-color:#000;
-margin-left:.5rem;
-background:#fde11d;
-padding:.3rem 0 .3rem 1rem;
-border-radius:1rem 0 0 1rem;
-transform:translateY(-3rem);
+font-family: "oswald", sans-serif;
+color: #000;
+margin-left: .5rem;
+background: #fde11d;
+padding: .3rem 0 .3rem 1rem;
+border-radius: 1rem 0 0 1rem;
+transform: translateY(-3rem);
 }
 
-.trabajos{
-background:#1A1A1A;
-display:flex;
-flex-wrap:wrap;
-gap:2rem;
-padding:5rem 2rem 5rem 2rem;
-justify-content:center;
-
-justify-content: start;
+.caja-proyectos__informacion-proyecto{
+padding:.5rem;
 }
 
-.trabajos-titulo{
-font-size:1.5rem;
+.informacion-proyecto__lenguajes{
+margin:.5rem;
+}
+
+.informacion-proyecto__lenguajes img{
+height:1.2rem;
+width:1.2rem;
+}
+
+.informacion-proyecto__texto{
 color:#fff;
-font-family: "oswald",sans-serif;
-flex-basis:100vw;
-border-bottom:.1rem solid #fff;
+margin:.5rem;
 }
 
-.trabajos__caja-trabajos{
-height:13rem;
-width:20rem;
+
+.informacion-proyecto__boton{
+height:2rem;
+width:7rem;
+color:#fff;
+display:grid;
+place-content:center;
 border:.1rem solid #fff;
-border-radius:.2rem .2rem .2rem .2rem;
+margin:.5rem;
 }
 
-.caja-trabajos__img{
-height:13rem;
-width:20rem;
+.rojo{
+color:rgb(255, 0, 0);
+}
+
+.amarillo{
+color:rgb(255, 255, 0);
 }
 
 .footer{
@@ -199,13 +207,6 @@ color:#fff;
 
 
 @media screen and (max-width:900px){
-    .contenedor-uno__img{
-        height:16rem;
-        width:16rem;
-    }
 
-    .cont-texto__texto{
-    font-size:1.2rem;
-    }
 }
 
