--- a/style.css
+++ b/style.css
@@ -205,7 +205,9 @@ color:#fff;
 
 
 
-@media screen and (max-width:900px){
-
+@media screen and (max-width:775px){
+    .proyectos{
+        place-content: center;
+    }
 }
 
