--- a/style.css
+++ b/style.css
@@ -117,6 +117,8 @@ border-bottom:.1rem solid #fff;
 .proyectos__caja-proyectos{
 width:20rem;
 border:.1rem solid #fff;
+display:grid;
+grid-template-rows:auto 1fr;
 }
 
 .caja-proyectos__contenedor-img{
@@ -142,11 +144,9 @@ transform: translateY(-3rem);
 }
 
 .caja-proyectos__informacion-proyecto{
-padding:.5rem;
-}
-
-.informacion-proyecto__lenguajes{
-margin:.5rem;
+display:grid;
+gap:1rem;
+padding:.7rem;
 }
 
 .informacion-proyecto__lenguajes img{
@@ -156,7 +156,6 @@ width:1.2rem;
 
 .informacion-proyecto__texto{
 color:#fff;
-margin:.5rem;
 }
 
 
@@ -164,10 +163,10 @@ margin:.5rem;
 height:2rem;
 width:7rem;
 color:#fff;
+align-self: end;
 display:grid;
 place-content:center;
 border:.1rem solid #fff;
-margin:.5rem;
 }
 
 .rojo{
